--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.3",
+    "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
