--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.3",
     "react-quill": "^2.0.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-share": "^5.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
